--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crapeapp",
+  "name": "portfolio_web_v2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,18 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "push.js": "^1.0.12",
-    "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
-    "vue-notification": "^1.3.20",
     "vue-router": "^3.2.0",
+    "vue-scrollto": "^2.20.0",
+    "vue-smoothscroll": "^0.2.0",
+    "vue-typer": "^1.2.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-pwa": "^4.5.8",
+    "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
@@ -27,7 +28,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.0",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
